VO-2805 Prevents chart labels from being cut off.

--- a/app/styles/_tempRefactor.scss
+++ b/app/styles/_tempRefactor.scss
@@ -342,3 +342,8 @@ hr {
 .clear-search {
   margin-top: 10px;
 }
+
+// volume of floorplans (auction side) chart
+.auction-dashboard-chart {
+  padding-bottom: 20px;
+}
